tests/errors/test_72.x
// Empty tuple type

fn main() -> void {

	let x: ();

}
